Some changes to fonttheme. Mostly reworking strucutre, for easier customizability.

--- a/GWtheme/beamerfontthemeGW.sty
+++ b/GWtheme/beamerfontthemeGW.sty
@@ -61,27 +61,77 @@
     
 
     % -- Actual Settings ------------------------------------------------------
-    \setbeamerfont{title}{family=\sffamily,size=\Huge}
-    \setbeamerfont{subtitle}{family=\sffamily,size=\Large}
-    \setbeamerfont{author}{family=\sffamily,size=\large}
-    \setbeamerfont{date}{family=\sffamily,size=\normalsize}
-    \setbeamerfont{institute}{family=\sffamily,size=\small}
+    \setbeamerfont{title}{
+        family=\sffamily,
+        size=\Huge,
+    }
+    \setbeamerfont{subtitle}{
+        family=\sffamily,
+        size=\Large,
+    }
+    \setbeamerfont{author}{
+        family=\sffamily,
+        size=\large,
+    }
+    \setbeamerfont{date}{
+        family=\sffamily,
+        size=\normalsize,
+    }
+    \setbeamerfont{institute}{
+        family=\sffamily,
+        size=\small,
+    }
     
-    \setbeamerfont{sectiontitle}{family=\sffamily,series=\mdseries,size=\LARGE}
-    \setbeamerfont{sectionsubtitle}{family=\sffamily,series=\mdseries,size=\Large}
+    \setbeamerfont{sectiontitle}{
+        family=\sffamily,
+        series=\mdseries,
+        size=\LARGE,
+    }
+    \setbeamerfont{sectionsubtitle}{
+        family=\sffamily,
+        series=\mdseries,
+        size=\Large,
+    }
     
-    \setbeamerfont{frametitle}{family=\sffamily,series=\mdseries,size=\LARGE}
-    \setbeamerfont{framesubtitle}{family=\sffamily,series=\mdseries,size=\Large}
-    % \setbeamerfont{frametitle}{family=\sffamily,series=\bfseries,size=\LARGE}
-    % \setbeamerfont{framesubtitle}{family=\sffamily,series=\bfseries,size=\Large}
+    \setbeamerfont{frametitle}{
+        family=\sffamily,
+        series=\mdseries,
+        % series=\bfseries,
+        size=\LARGE,
+    }
+    \setbeamerfont{framesubtitle}{
+        family=\sffamily,
+        series=\mdseries,
+        % series=\bfseries,
+        size=\Large,
+    }
     % -- \mdseries vs \bfseries doesn't do anything for these here
-    \setbeamerfont{headline}{family=\rmfamily,series=\mdseries,size=\small}
-    \setbeamerfont{block title}{family=\rmfamily,series=\bfseries,size=\large}
+
+    \setbeamerfont{headline}{
+        family=\rmfamily,
+        series=\mdseries,
+        size=\small,
+    }
+    \setbeamerfont{block title}{
+        family=\rmfamily,
+        series=\bfseries,
+        size=\large,
+    }
     
-    \setbeamerfont{author in head/foot}{family=\sffamily,series=\bfseries,size=\scriptsize}
-    \setbeamerfont{framenumber in head/foot}{family=\sffamily,series=\bfseries,size=\scriptsize}
+    \setbeamerfont{author in head/foot}{
+        family=\sffamily,
+        series=\bfseries,
+        size=\scriptsize,
+    }
+    \setbeamerfont{framenumber in head/foot}{
+        family=\sffamily,
+        series=\bfseries,
+        size=\scriptsize,
+    }
     
-    \setbeamerfont{caption}{size=\footnotesize}
+    \setbeamerfont{caption}{
+        size=\footnotesize,
+    }
 }{
     % -- Loading Fonts --------------------------------------------------------
     % \RequirePackage{heuristica}
@@ -91,34 +141,93 @@
 
 
     % -- Actual Settings ------------------------------------------------------
-    % \setbeamerfont{title}{family=\rmfamily,series=\mdseries,size=\Huge}
-    % \setbeamerfont{subtitle}{family=\rmfamily,series=\mdseries,size=\Large}
-    \setbeamerfont{title}{family=\rmfamily,series=\bfseries,size=\LARGE}
-    \setbeamerfont{subtitle}{family=\rmfamily,series=\bfseries,size=\Large}
-    % \setbeamerfont{author}{family=\rmfamily,size=\large}
-    \setbeamerfont{author}{family=\rmfamily,series=\scshape,size=\normalsize}
-    \setbeamerfont{date}{family=\rmfamily,size=\normalsize}
-    \setbeamerfont{institute}{family=\rmfamily,size=\small}
+    \setbeamerfont{title}{
+        family=\rmfamily,
+        % series=\mdseries,
+        % size=\Huge,
+        series=\bfseries,
+        size=\LARGE,
+    }
+    \setbeamerfont{subtitle}{
+        family=\rmfamily,
+        % series=\mdseries,
+        % size=\LARGE,
+        series=\bfseries,
+        size=\Large,
+    }
+    \setbeamerfont{author}{
+        family=\rmfamily,
+        % family=\sffamily,
+        series=\scshape,
+        % size=\large,
+        size=\normalsize,
+    }
+    \setbeamerfont{date}{
+        family=\rmfamily,
+        size=\normalsize,
+    }
+    \setbeamerfont{institute}{
+        family=\rmfamily,
+        size=\small,
+    }
     
-    % \setbeamerfont{sectiontitle}{family=\rmfamily,series=\bfseries,size=\LARGE}
-    % \setbeamerfont{sectionsubtitle}{family=\rmfamily,series=\bfseries,size=\Large}
-    % \setbeamerfont{sectiontitle}{family=\sffamily,series=\bfseries,size=\LARGE}
-    % \setbeamerfont{sectionsubtitle}{family=\sffamily,series=\bfseries,size=\Large}
-    \setbeamerfont{sectiontitle}{family=\sffamily,series=\mdseries,size=\LARGE}
-    \setbeamerfont{sectionsubtitle}{family=\sffamily,series=\mdseries,size=\Large}
     
-    % \setbeamerfont{frametitle}{family=\rmfamily,series=\bfseries,size=\LARGE}
-    % \setbeamerfont{framesubtitle}{family=\rmfamily,series=\bfseries,size=\Large}
-    % \setbeamerfont{frametitle}{family=\sffamily,series=\bfseries,size=\LARGE}
-    % \setbeamerfont{framesubtitle}{family=\sffamily,series=\bfseries,size=\Large}
-    \setbeamerfont{frametitle}{family=\sffamily,series=\mdseries,size=\LARGE}
-    \setbeamerfont{framesubtitle}{family=\sffamily,series=\mdseries,size=\Large}
+    \setbeamerfont{sectiontitle}{
+        family=\rmfamily,
+        % family=\sffamily,
+        series=\bfseries,
+        % series=\mdseries,
+        size=\LARGE,
+    }
+    \setbeamerfont{sectionsubtitle}{
+        family=\rmfamily,
+        % family=\sffamily,
+        series=\bfseries,
+        % series=\mdseries,
+        size=\Large,
+    }
+    
+
+    \setbeamerfont{frametitle}{
+        family=\rmfamily,
+        % family=\sffamily,
+        series=\bfseries,
+        % series=\mdseries,
+        size=\LARGE,
+    }
+    \setbeamerfont{framesubtitle}{
+        family=\rmfamily,
+        % family=\sffamily,
+        series=\bfseries,
+        % series=\mdseries,
+        size=\Large,
+    }
     % -- Do not like sans family here -> for Merriweather it is quite nice actually
-    \setbeamerfont{headline}{family=\rmfamily,series=\mdseries,size=\small}
-    \setbeamerfont{block title}{family=\rmfamily,series=\bfseries,size=\large}
+
+
+    \setbeamerfont{headline}{
+        family=\rmfamily,
+        series=\mdseries,
+        size=\small,
+    }
+    \setbeamerfont{block title}{
+        family=\rmfamily,
+        series=\bfseries,
+        size=\large,
+    }
     
-    \setbeamerfont{author in head/foot}{family=\sffamily,series=\bfseries,size=\scriptsize}
-    \setbeamerfont{framenumber in head/foot}{family=\sffamily,series=\bfseries,size=\scriptsize}
+    \setbeamerfont{author in head/foot}{
+        family=\sffamily,
+        series=\bfseries,
+        size=\scriptsize,
+    }
+    \setbeamerfont{framenumber in head/foot}{
+        family=\sffamily,
+        series=\bfseries,
+        size=\scriptsize,
+    }
     
-    \setbeamerfont{caption}{size=\footnotesize}
+    \setbeamerfont{caption}{
+        size=\footnotesize,
+    }
 }
