--- a/GWtheme/beamerouterthemeGW.sty
+++ b/GWtheme/beamerouterthemeGW.sty
@@ -199,20 +199,28 @@
 \usetikzlibrary{calc}
 
 \newlength{\themeGW@squaresize}
-% \setlength{\themeGW@squaresize}{3.6pt}
 \setlength{\themeGW@squaresize}{5pt}
+
+\newcommand{\themeGW@SetNSquarePerTriangle}[1]{%
+    \def\themeGW@NSquarePerTriangle{#1}%
+    \def\themeGW@PatternStepSize{1/(#1 - 1)}%
+}
+% -- This allows easier access of step size
+
+\themeGW@SetNSquarePerTriangle{9}  % Should be odd number, otherwise things will probably look strange
+
 
 \tikzset{
     fillsquare1/.style={
         black!12!fg,
-        line width=0.8pt,
+        line width=0.6pt,
     },
     fillsquarepath1/.style={
         fg,
         postaction=decorate,
         decoration={
             markings,
-            mark = between positions 0 and 1 step 1/8 with {
+            mark = between positions 0 and 1 step \themeGW@PatternStepSize with {
                 \draw[fillsquare1] (-\themeGW@squaresize/2, -\themeGW@squaresize/2) rectangle (\themeGW@squaresize/2, \themeGW@squaresize/2);
             },
         },
@@ -220,14 +228,14 @@
     fillsquare2/.style={
         % fg!90!gray,
         white!5!fg,
-        line width=0.8pt,
+        line width=0.6pt,
         },
     fillsquarepath2/.style={
         fg,
         postaction=decorate,
         decoration={
             markings,
-            mark = between positions 0 and 1 step 1/8 with {
+            mark = between positions 0 and 1 step \themeGW@PatternStepSize with {
                 \draw[fillsquare2] (-\themeGW@squaresize/2, -\themeGW@squaresize/2) rectangle (\themeGW@squaresize/2, \themeGW@squaresize/2);
             },
         },
@@ -240,6 +248,9 @@
 \newlength{\themeGW@PatternRelativeShift}
 \newlength{\themeGW@SquarePathHeight}
 
+\def\themeGW@NSquareCommonShift{-1}
+\def\themeGW@NSquareRelativeShift{2}
+
 
 % \setlength{\themeGW@footupshift}{0.25\themeGW@MaxFootHeight}
 % \setlength{\themeGW@footrightshift}{0.25\themeGW@MaxFootHeight}
@@ -248,15 +259,35 @@
 % \setlength{\themeGW@upperrightbg}{0.14\paperheight}
 
 
+\def\themeGW@NSquareDownShift{1}
+\newlength{\themeGW@PatternDownShift}
+% \setlength{\themeGW@PatternDownShift}{\themeGW@NSquareDownShift*\themeGW@SquarePathHeight*\themeGW@PatternStepSize}  % Shift by one square
+% \setlength{\themeGW@PatternDownShift}{\themeGW@SquarePathHeight*\themeGW@NSquareDownShift*\themeGW@PatternStepSize}  % Shift by one square
+% \setlength{\themeGW@PatternDownShift}{3*\themeGW@SquarePathHeight*2*\themeGW@PatternStepSize}  % Shift by one square
+% \addtolength{\themeGW@SquarePathHeight}{\themeGW@PatternDownShift}
+
+% \newcommand{\themeGW@SetPatternDownShift}[1]{%
+%     \setlength{\themeGW@PatternDownShift}{#1}%
+%     % \addtolength{\themeGW@SquarePathHeight}{#1}%
+% }
+
+
 \setlength{\themeGW@MaxFootHeight}{\themeGW@upperrightbg}  % In current mode, where we have rising slope from left to right
-% \setlength{\themeGW@SquarePathHeight}{\themeGW@MaxFootHeight - \themeGW@squaresize}
-\setlength{\themeGW@SquarePathHeight}{\themeGW@MaxFootHeight - \themeGW@squaresize * 707 / 1000}
-% \setlength{\themeGW@SquarePathHeight}{\themeGW@upperleftbg}
-\setlength{\themeGW@PatternCommonShift}{0pt}
-\setlength{\themeGW@PatternRelativeShift}{-\themeGW@SquarePathHeight / 2}  % So that we have shift by one square
+\setlength{\themeGW@SquarePathHeight}{\themeGW@MaxFootHeight - \themeGW@squaresize * 707 / 1000}  % Very rough approximation of 1/sqrt(2), avoiding overflow. We do not account for linewidth (like Caltech website).
+
+\setlength{\themeGW@PatternDownShift}{\themeGW@SquarePathHeight*\themeGW@NSquareDownShift*2*\themeGW@PatternStepSize}  % Step size is relative to triangle width, which is 2*SquarePathHeight
+\addtolength{\themeGW@SquarePathHeight}{\themeGW@PatternDownShift}
+
+\setlength{\themeGW@PatternCommonShift}{-\themeGW@SquarePathHeight*\themeGW@NSquareCommonShift*2*\themeGW@PatternStepSize}  % Shift by NSquareCommonShift
+\setlength{\themeGW@PatternRelativeShift}{-\themeGW@SquarePathHeight*\themeGW@NSquareRelativeShift*2*\themeGW@PatternStepSize}  % Shift by NSquareRelativeShift
+
+
+\newlength{\themeGW@PatternInsetSize}
+\setlength{\themeGW@PatternInsetSize}{0pt}
 
 
 \defbeamertemplate{background}{GWWithPattern}{%
+    % TODO: add command \CalcPatternLengths
     \begin{tikzpicture}[overlay,remember picture]%
         % -- We can just do clipping in other scope and immediately draw correct thing here
         \clip[smooth] (current page.south west) -- ++(0, \themeGW@upperleftbg) -- ++(\paperwidth, \themeGW@upperrightbg-\themeGW@upperleftbg) -- (current page.south east) -- cycle;
@@ -265,7 +296,8 @@
 
 
         \begin{scope}[
-            shift=(current page.south west),
+            shift=(current page.south),
+            % shift=(current page.south west),
         ]
             \clip[smooth] (current page.south west) -- ++(0, \themeGW@upperleftbg) -- ++(\paperwidth, \themeGW@upperrightbg-\themeGW@upperleftbg) -- (current page.south east) -- cycle;
 
@@ -273,17 +305,42 @@
             \pgfmathsetmacro{\LastIndex}{2*\LastIndex+1}  % +1 to make sure we do not encounter rounding errors
             \pgfmathround{\LastIndex}
             \let\LastIndexInt\pgfmathresult
-            \foreach \i in {0, 2, 4, ..., \LastIndexInt} {
+            
+            % \pgfmathsetmacro{\HalfShift}{\paperwidth/(2*\themeGW@SquarePathHeight)}
+            % % \pgfmathsetmacro{\HalfShift}{\HalfShift/2}
+            % \pgfmathsetmacro{\HalfShift}{\HalfShift/4}
+            \pgfmathsetmacro{\HalfShift}{\LastIndex/4}
+            \pgfmathround{\HalfShift}
+            \let\HalfShift\pgfmathresult
+            % -- We want to shift by integer multiple of whole pattern length, thus division by 4
+
+            \foreach \i in {-2, 0, 2, 4, ..., \LastIndexInt} {  % -2 to safeguard against large commonshift
                 \draw[
                     fillsquarepath1,
-                    shift={(\i*\themeGW@SquarePathHeight + \themeGW@PatternCommonShift, 0)},
+                    shift={(
+                        \i*\themeGW@SquarePathHeight
+                        + \themeGW@PatternCommonShift
+                        - \themeGW@SquarePathHeight
+                        - \HalfShift*2*\themeGW@SquarePathHeight,
+                        % 0
+                        -\themeGW@PatternDownShift
+                    )},
                 ] (0, 0)
                     -- ++(\themeGW@SquarePathHeight, \themeGW@SquarePathHeight)
                     -- ++(\themeGW@SquarePathHeight, -\themeGW@SquarePathHeight);
                 
+                
                 \draw[
                     fillsquarepath2,
-                    shift={(\i*\themeGW@SquarePathHeight + \themeGW@PatternCommonShift + \themeGW@PatternRelativeShift, 0)},
+                    shift={(
+                        \i*\themeGW@SquarePathHeight
+                        + \themeGW@PatternCommonShift
+                        + \themeGW@PatternRelativeShift
+                        - \themeGW@SquarePathHeight
+                        - \HalfShift*2*\themeGW@SquarePathHeight,
+                        % 0
+                        -\themeGW@PatternDownShift
+                    )},
                 ] (0, 0)
                     -- ++(\themeGW@SquarePathHeight, \themeGW@SquarePathHeight)
                     -- ++(\themeGW@SquarePathHeight, -\themeGW@SquarePathHeight);
@@ -296,6 +353,18 @@
             \node[anchor=east,inner sep=0pt,draw=none,xshift=-\themeGW@footrightshift,yshift=\themeGW@upperrightbg/2] at (current page.south east) {\pgfuseimage{logo}};
         }
     \end{tikzpicture}%
+    \begin{tikzpicture}[overlay,remember picture]%
+        \begin{scope}[
+            shift={(current page.south)},
+        ]
+            \draw[
+                bg,
+                fill,
+                shift={(0, \themeGW@upperleftbg/2 + \themeGW@upperrightbg/2)},
+                rotate=45,
+            ] (-\themeGW@PatternInsetSize/2, -\themeGW@PatternInsetSize/2) rectangle (\themeGW@PatternInsetSize/2, \themeGW@PatternInsetSize/2);
+        \end{scope}
+    \end{tikzpicture}%
 }
 
 % -- Not the default. To activate, uncomment next line
@@ -303,15 +372,23 @@
 
 
 \newcommand{\LevelledBGLine}[1]{
-    \newlength{\@tmp}
-    \setlength{\@tmp}{#1}
+    \def\@tmp{#1}
     \setlength{\themeGW@upperleftbg}{\@tmp}
     \setlength{\themeGW@upperrightbg}{\@tmp}
-    \setlength{\themeGW@SquarePathHeight}{\@tmp - \themeGW@squaresize * 707 / 1000}  % Avoid calculation of sqrt(2)
-    \setlength{\themeGW@PatternRelativeShift}{-\themeGW@SquarePathHeight / 2}  % So that we have shift by one square
+    % \setlength{\themeGW@SquarePathHeight}{\@tmp - \themeGW@squaresize * 707 / 1000}  % Very rough approximation of 1/sqrt(2), avoiding overflow. We do not account for linewidth (like Caltech website).
+    % \addtolength{\themeGW@SquarePathHeight}{\themeGW@PatternDownShift}
+    % \setlength{\themeGW@SquarePathHeight}{\@tmp - \themeGW@squaresize * 707 / 1000 + \themeGW@PatternDownShift}  % Very rough approximation of 1/sqrt(2), avoiding overflow. We do not account for linewidth (like Caltech website).
+    \setlength{\themeGW@SquarePathHeight}{\@tmp - \themeGW@squaresize * 707 / 1000}  % Very rough approximation of 1/sqrt(2), avoiding overflow. We do not account for linewidth (like Caltech website).
+    % \setlength{\themeGW@PatternDownShift}{\themeGW@SquarePathHeight*\themeGW@NSquareDownShift*1*\themeGW@PatternStepSize}%
+    \setlength{\themeGW@PatternDownShift}{\themeGW@SquarePathHeight*\themeGW@NSquareDownShift*2*\themeGW@PatternStepSize}%
+    \addtolength{\themeGW@SquarePathHeight}{\themeGW@PatternDownShift}%
+    % -- Since we set lengths and do not 
+    \setlength{\themeGW@PatternCommonShift}{-\themeGW@SquarePathHeight*\themeGW@NSquareCommonShift*2*\themeGW@PatternStepSize}  % So that we have shift by one square
+    \setlength{\themeGW@PatternRelativeShift}{-\themeGW@SquarePathHeight*\themeGW@NSquareRelativeShift*2*\themeGW@PatternStepSize}  % So that we have shift by one square
+    % 
+    % TODO: use \UpdateGWthemeOptions? Or can we not assume it to be present?
 }
 
-% TODO: account for linewidth?
 
 
 % -- Footline and navigation symbols ------------------------------------------
@@ -341,7 +418,7 @@
 \defbeamertemplate*{footline}{GW}[1][true]{%
   \leavevmode%
   \hbox{%
-  \begin{beamercolorbox}[wd=.5\paperwidth]{footline}%
+  \begin{beamercolorbox}[wd=.333\paperwidth]{footline}%
     \hspace\themeGW@footrightshift%
     {%
         \usebeamerfont{author in head/foot}%
@@ -349,7 +426,9 @@
         \MakeUppercase\insertshortauthor% Does not actually make stuff uppercase, for some reason -> thus, if you intend to use this, define the short author with MakeUppercase already
     }%
     \hfill%
-    {%
+  \end{beamercolorbox}
+  \begin{beamercolorbox}[wd=.333\paperwidth]{footline}%
+    \centering%
     \usebeamerfont{framenumber in head/foot}%
         \iftoggle{inappendix}{%
             \phantom{42/96}%
@@ -362,9 +441,8 @@
             \phantom{42/96}%
         }%
         }%
-    }%
   \end{beamercolorbox}%
-  \begin{beamercolorbox}[wd=.5\paperwidth]{footline}%
+  \begin{beamercolorbox}[wd=.333\paperwidth]{footline}%
     \iftoggle{themeGW@logoinfoot}{%
         \tikz[overlay,remember picture]{\node[anchor=east,inner sep=0pt,draw=none,xshift=-\themeGW@footrightshift,yshift=\themeGW@upperrightbg/2] at (current page.south east) {\pgfuseimage{logo}};}%
     }{}%
